# PyAlias-Windows-Alias-Manager

./: .gitignore  README.md  pyproject.toml  setup.py
pyalias/: __init__.py  cli.py  launcher.c  path_utils.py
