[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyalias"
version = "0.1.0"
description = "Native command aliases for Windows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Beltran Offerrall"}
]

[project.scripts]
pyalias = "pyalias.cli:main"

[tool.setuptools]
packages = ["pyalias"]

[tool.setuptools.package-data]
pyalias = ["*.exe", "*.c"]